log
Sat 11 May 2024 04:37:50 PM UTC: 
 tests:  1|8
total_score: 0/70
5bb527d
Sat 11 May 2024 04:43:49 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
6a01767
Sat 11 May 2024 05:12:26 PM UTC: 
 treemap.c | 50 +++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 49 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
fb3d26a
Sat 11 May 2024 05:14:05 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a3deb58
Sat 11 May 2024 05:16:09 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
fe35537
Sat 11 May 2024 05:53:18 PM UTC: 
 treemap.c | 37 ++++++++++++++++---------------------
 1 file changed, 16 insertions(+), 21 deletions(-)
 tests:  0|0
9e3b641
Sat 11 May 2024 05:55:13 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
fdfcbce
Sat 11 May 2024 06:01:01 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
2e7b55e
Sat 11 May 2024 06:02:24 PM UTC: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:11: error: unused variable ‘auxPair’ [-Werror=unused-variable]
   64 |     Pair* auxPair = aux->pair;
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7de29bb
Sat 11 May 2024 06:04:19 PM UTC: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:68:15: error: unused variable ‘auxPair’ [-Werror=unused-variable]
   68 |         Pair* auxPair = aux->pair;
      |               ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1782b37
Sat 11 May 2024 06:04:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
f8a889a
Sat 11 May 2024 06:12:43 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|0
64a815f
Sat 11 May 2024 06:13:52 PM UTC: 
 treemap.c | 14 --------------
 1 file changed, 14 deletions(-)
 tests:  6|6
total_score: 15/70
4b31361
Sat 11 May 2024 06:28:22 PM UTC: 
 treemap.c | 19 +++++++++++++++----
 1 file changed, 15 insertions(+), 4 deletions(-)
 tests:  7|6
total_score: 15/70
445caef
Sat 11 May 2024 06:28:54 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|6
total_score: 15/70
d51177f
Sat 11 May 2024 06:32:57 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
a2efa51
Sat 11 May 2024 06:33:37 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:135:1: error: control reaches end of non-void function [-Werror=return-type]
  135 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ba964d1
Sat 11 May 2024 06:34:15 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
3b6ebe8
Sat 11 May 2024 06:39:17 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
01dd390
Sat 11 May 2024 07:23:05 PM UTC: 
 treemap.c | 47 +++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 47 insertions(+)
 tests:  16|4
total_score: 30/70
e47e2e5
Sat 11 May 2024 07:24:36 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
b441f08
Sat 11 May 2024 07:25:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
6f65918
